--- a/encriptador/styles.css
+++ b/encriptador/styles.css
@@ -1,4 +1,3 @@
-/* styles.css */
 body {
     font-family: 'Roboto', sans-serif;
     background: url('recursos/background.jpg') no-repeat center center fixed;
@@ -7,8 +6,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
-    padding: 20px 0;
+    min-height: 100vh;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .title-section {
@@ -17,7 +17,7 @@ body {
     text-align: center;
     border: 2px solid #007BFF;
     border-radius: 8px;
-    margin-bottom: 20px;
+    margin: 20px;
     width: 80%;
     max-width: 1200px;
 }
@@ -37,6 +37,8 @@ body {
     flex-direction: column;
     width: 80%;
     max-width: 1200px;
+    flex: 1;
+    box-sizing: border-box;
 }
 
 header {
@@ -57,6 +59,9 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    flex: 1;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .input-section, .output-section {
@@ -65,7 +70,8 @@ main {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
+    margin-bottom: 10px; 
+    box-sizing: border-box;
 }
 
 textarea {
@@ -77,21 +83,22 @@ textarea {
     resize: none;
     background-color: #f0f4f8;
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 textarea#inputText {
-    height: 150px; 
+    height: 100px; 
 }
 
 textarea#outputText {
-    height: 250px; 
+    height: 150px; 
 }
 
 .buttons {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 10px; 
 }
 
 button {
@@ -116,9 +123,14 @@ button:hover {
 }
 
 footer {
-    background-color: #f0f4f8;
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 10px;
     text-align: center;
     font-size: 14px;
     color: #555;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-top: 1px solid #ccc;
+    margin-top: 10px; 
+    box-sizing: border-box;
 }
